# goldilocks-json-fmt

./: .gitignore  Cargo.toml  README.md
benches/: README.md  cccbr-methods.json  earthquakes.json  format.rs  historical-events.json  meteorites.json
src/: formatting.rs  lib.rs  main.rs  parsing.rs
