[package]
name = "goldilocks-json-fmt"
version = "0.2.0"
edition = "2021"

authors = ["Ben White-Horne <kneasle@gmail.com>"]
description = "A simple, portable, fast, pretty JSON formatter."
license = "MIT"
repository = "https://github.com/kneasle/goldilocks-json-fmt"

[dependencies]
# None at all!

[profile.release]
debug = true

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "format"
harness = false
